--- a/package.json
+++ b/package.json
@@ -1,30 +1,37 @@
 {
-  "name": "next-min",
-  "version": "0.0.1",
-  "description": "Computes the minimum value of array. If array is empty or falsey, undefined is returned.",
-  "homepage": "https://github.com/afeiship/next-min",
-  "author": {
-    "name": "afei",
-    "email": "1290657123@qq.com"
-  },
+  "name": "@jswork/data-pagination",
+  "version": "1.0.0",
+  "description": "Raw data(items) pagination.",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "browser": "./dist/index.umd.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "gulp"
+    "build": "tsup",
+    "postbuild": "rollup -c rollup.config.mjs",
+    "test": "bun test",
+    "release": "release-it"
   },
-  "main": "dist/next-min.js",
   "license": "MIT",
   "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-size": "^2.1.0",
-    "gulp-uglify": "^2.1.2",
-    "yargs": "^4.7.1",
-    "mocha": "^3.5.0"
+    "@jswork/next": "^1.2.2",
+    "@jswork/rollup-banner": "^1.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@swc/core": "^1.3.101",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^18.15.5",
+    "rollup": "^4.9.6",
+    "tslib": "^2.6.2",
+    "tsup": "^8.0.1",
+    "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "next-js-core2": "github:afeiship/next-js-core2"
-  }
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {}
 }
