--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/data-pagination",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Raw data(items) pagination.",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
@@ -33,5 +33,13 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "next",
+    "data",
+    "page",
+    "pagination",
+    "previous",
+    "total"
+  ]
 }
